src/style/components/_portfolio.scss
@use "../utilities/colours";
@use "../utilities/variables";
@use "../mixins/pseudo";
@use "../mixins/hiddenTransition";
@use "../mixins/backgroundMask";
@use "../mixins/buttonGradient";
@use "../mixins/media";
@use "../utilities/typography";
@forward "../utilities/classes";

.portfolio {
    position: relative;
    z-index: 5;
}

div.portfolio-info-panel {
    transition-duration: variables.$defaultTransitionDuration;
    transition-property: opacity, visibility, transform;
    transition-timing-function: variables.$defaultEasing;
    z-index: -1;
    height: max-content;
    min-height: 100%;
    overflow: hidden;

    &:before,
    &:after {
        @include pseudo.pseudoMixinAbsolute(
            $left: 0,
            $bottom: 0,
            $top: unset,
            $height: 26.4rem
        );
    }

    &:before {
        opacity: 0.25;
        z-index: -2;
        background-color: var(--light);
        -webkit-mask-image: url("/images/masks/navBgMask.svg");
        mask-image: url("/images/masks/navBgMask.svg");
        -webkit-mask-position: center bottom;
        mask-position: center bottom;
        -webkit-mask-size: 65px;
        mask-size: 65px;
    }

    &:after {
        z-index: -1;
        background: radial-gradient(
                ellipse farthest-side at bottom left,
                transparent 0%,
                var(--dark) 100%
            )
            no-repeat bottom left;
        background-size: 100% 26.4rem;
    }

    &.left:after {
        background: radial-gradient(
                ellipse farthest-side at bottom right,
                transparent 0%,
                var(--dark) 100%
            )
            no-repeat bottom right;
    }
}

p.portfolio-info-panel-description {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
}

div.portfolio-masonry-item {
    &:hover {
        z-index: 1;

        div.portfolio-info-panel {
            @extend .shown;

            &.left {
                transform: translateX(-100%);
            }

            &.right {
                transform: translateX(100%);
            }
        }
    }

    img {
        animation: fadeInUp 1s cubic-bezier(0.25, 1, 0.5, 1);
    }
}

.portfolio-image-placeholder {
    column-gap: 0.5rem;
    z-index: 0;

    > div {
        opacity: 0;
        border-radius: 50%;
        background-color: var(--light);
        width: 1rem;
        height: 1rem;
        animation: placeholderEllipsis
            variables.$placeholderEllipsisAnimationDuration infinite;

        &:nth-of-type(2) {
            animation-delay: 0.25s;
        }

        &:nth-of-type(3) {
            animation-delay: 0.5s;
        }
    }

    &:has(~ img) {
        transition: opacity;
        transition-delay: 2s;
        transition-duration: 0s;
        opacity: 0;
    }
}

div.portfolio-info-panel-grid {
    grid-template-columns: auto 1fr;
    margin-bottom: 0.8rem;
    gap: 0.5rem;

    p {
        margin-bottom: 0;
    }
}

div.portfolio-lightbox-wrapper {
    z-index: 10;
}

div.portfolio-lightbox {
    grid-template-columns: 3fr 2fr;
    column-gap: 3rem;
    min-height: 100%;

    .portfolio-lightbox-bg {
        @include pseudo.pseudoMixinAbsolute($left: 0);
        z-index: -2;
        background-color: var(--dark);
    }
}

.portfolio-lightbox-content-container {
    position: relative;
    max-height: 100vh;

    > div {
        min-height: 0;
        max-height: 100vh;
        overflow-x: hidden;
        overflow-y: scroll;
        -webkit-overflow-scrolling: touch;
        scrollbar-width: none; /* Firefox */
        -ms-overflow-style: none; /* IE and Edge */
        /* Hide scrollbar for Chrome, Safari and Opera */
        &::-webkit-scrollbar {
            display: none;
        }
    }

    // typography

    b,
    strong {
        font-weight: 700;
    }

    i,
    em {
        font-style: italic;
    }

    u {
        text-decoration: underline;
    }

    del {
        text-decoration: line-through;
    }

    ul,
    ol,
    li {
        @each $prop,
            $value in map-get(map-get(typography.$styles, "p"), "style")
        {
            #{$prop}: #{$value};
        }
    }

    ul,
    ol {
        list-style-position: inside;
    }

    ul {
        list-style-type: disc;
    }

    ol {
        list-style-type: numeric;
    }

    a {
        color: inherit;
    }

    code {
        @extend .p-3;
        @each $prop,
            $value in map-get(map-get(typography.$styles, "p.small"), "style")
        {
            #{$prop}: #{$value};
        }
        display: block;
        margin: 2rem 0;
        border: 1px solid var(--light);
        background-color: lighten(map-get(colours.$colours, "dark"), 5%);
        font-family: var(--font-code);
    }

    blockquote {
        position: relative;
        margin: 2rem 0;
        text-align: center;

        &:before,
        &:after {
            @include pseudo.pseudoMixinAbsolute(
                $top: unset,
                $width: 6rem,
                $height: 6rem
            );
            background-color: var(--light);
        }

        &:before {
            @include backgroundMask.backgroundMaskMixin(
                "/images/icons/quoteOpen.svg",
                100%
            );
            top: 0;
            left: 0;
        }

        &:after {
            @include backgroundMask.backgroundMaskMixin(
                "/images/icons/quoteClose.svg",
                100%
            );
            right: 0;
            bottom: 0;
        }

        > p {
            padding: 5rem 4rem;
            font-size: 4rem;
        }
    }
}

.portfolio-lightbox-content-back-text {
    left: -15rem;
    opacity: 0.1;
    z-index: -1;
    width: max-content;
    line-height: 65%;
    font-size: 20rem;
    background-blend-mode: lighten;
    mix-blend-mode: lighten;
}

.portfolio-lightbox-tag {
    margin: 0;
    rotate: 180deg;
    writing-mode: vertical-lr;
    text-orientation: sideways;
}

.portfolio-lightbox-stack-icon {
    position: relative;
    width: 4rem;
    height: 4rem;

    > div {
        @include pseudo.pseudoMixinAbsolute(
            $left: 50%,
            $bottom: 0,
            $top: unset,
            $width: auto,
            $height: auto
        );
        transform: translate(-50%, 125%);
        width: max-content;
        font-size: 1.5rem;
    }

    &:hover {
        > div {
            visibility: visible;
            opacity: 1;
        }
    }
}

.portfolio-lightbox-timeline {
    &:after {
        @include pseudo.pseudoMixinAbsolute(
            $width: 4rem,
            $left: 0,
            $height: 1.6rem
        );
        background: linear-gradient(180deg, var(--dark) 0%, transparent 100%);
    }
}

.portfolio-lightbox-timeline-grid {
    grid-template-columns: auto 1fr;

    > div {
        transition: transform variables.$defaultTransitionDuration
            variables.$defaultEasing;
    }
}

.portfolio-lightbox-timeline-item {
    &.active {
        .portfolio-lightbox-timeline-content {
            @include hiddenTransition.hiddenTransitionMixin;
            visibility: visible;
            opacity: 1;
        }
    }

    &.inactive {
        pointer-events: none;

        .portfolio-lightbox-timeline-content,
        .portfolio-lightbox-timeline-heading {
            visibility: hidden;
            opacity: 0;
        }
    }

    .portfolio-lightbox-timeline-heading {
        min-height: 5.5rem;
    }

    .portfolio-lightbox-timeline-button {
        @include buttonGradient.buttonGradientMixin();
        position: relative;
        width: 4rem;
        height: 4rem;

        &.down {
            @include backgroundMask.backgroundMaskMixin(
                "/images/icons/timelineNext.svg",
                100%
            );
        }

        &.up {
            @include backgroundMask.backgroundMaskMixin(
                "/images/icons/timelinePrevious.svg",
                100%
            );
        }
    }
}

.portfolio-lightbox-timeline-segment {
    height: 5.5rem;

    &:before {
        //dot
        @include pseudo.pseudoMixin($width: 1rem, $height: 1rem, $top: 1.8rem);
        flex-shrink: 0;
        transition-duration: variables.$defaultTransitionDuration;
        transition-property: transform;
        transition-timing-function: variables.$defaultEasing;
        margin-right: 1.5rem;
        margin-left: 1.5rem;
        border-radius: 50%;
        background-color: var(--light);
    }

    &:after {
        //line
        @include pseudo.pseudoMixinAbsolute(
            $width: 0.2rem,
            $height: 100%,
            $top: 0,
            $left: 2rem
        );
        flex-shrink: 0;
        transform: translateX(-50%);
        background-color: var(--light);
    }

    &:first-child:after {
        top: 1.8rem;
        height: calc(100% - 1.8rem);
    }

    &:last-child:after {
        height: 1.8rem;
    }

    &:only-child:after {
        display: none;
    }

    &.active {
        &:before {
            transform: scale(1.5);
        }
    }
}

.portfolio-lightbox-timeline-content {
    @include hiddenTransition.hiddenTransitionMixin;
    visibility: hidden;
    opacity: 0;
}

@include media.media-up("lg") {
    div.portfolio-lightbox-image-wrapper {
        aspect-ratio: unset !important;
    }
}

@include media.media-down("lg") {
    div.portfolio-lightbox-wrapper {
        min-height: 0;
        overflow-x: hidden;
        overflow-y: scroll;
        -webkit-overflow-scrolling: touch;
    }

    div.portfolio-lightbox {
        grid-template-rows: auto 1fr;
        grid-template-columns: 100%;

        > div {
            grid-column: 1;

            &.portfolio-lightbox-bg {
                position: static;
                grid-row: 1/-1;
            }

            @for $n from 2 through 3 {
                &:nth-of-type(#{$n}) {
                    grid-row: $n - 1;
                }
            }
        }
    }

    div.portfolio-lightbox-content-container {
        max-height: none;

        &:before {
            @include pseudo.pseudoMixinAbsolute($left: 0);
            z-index: -1;
        }

        > div {
            max-height: none;
            overflow-x: visible;
            overflow-y: visible;
        }
    }

    @media screen and (orientation: landscape) {
        div.portfolio-lightbox {
            grid-template-rows: 100dvh max-content;
            height: max-content;
        }

        img.portfolio-lightbox-image {
            width: auto !important;
            height: 100% !important;
        }
    }
}

@include media.media-down("sm") {
    .portfolio {
        &:after {
            background-image: radial-gradient(
                circle farthest-side at top right,
                transparent 0%,
                var(--light) 60%
            );
        }
    }
}

